Ability to save alignment plots at a specified size and dpi

--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -162,6 +162,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Alignment\AlignmentPlotCreator.cs" />
     <Compile Include="Alignment\AlignmentSettingsViewModel.cs" />
     <Compile Include="Alignment\AlignmentView.xaml.cs">
       <DependentUpon>AlignmentView.xaml</DependentUpon>
