--- a/src/Applications/MultiAlignConsole/packages.config
+++ b/src/Applications/MultiAlignConsole/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net45" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net45" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
+  <package id="log4net" version="2.0.4" targetFramework="net45" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.98.1" targetFramework="net45" />
 </packages>
