Update OxyPlot to prevent getting too far out of date.

--- a/src/Applications/MultiAlign/packages.config
+++ b/src/Applications/MultiAlign/packages.config
@@ -8,7 +8,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NHibernate" version="4.0.3.4000" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
-  <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net45" />
-  <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="1.0.0-unstable1886" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="1.0.0-unstable1886" targetFramework="net45" />
 </packages>
