--- a/src/MultiAlignRogue/packages.config
+++ b/src/MultiAlignRogue/packages.config
@@ -5,7 +5,7 @@
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
-  <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net45" />
-  <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="1.0.0-unstable1886" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="1.0.0-unstable1886" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net45" />
 </packages>
