--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -264,6 +264,12 @@
     </Compile>
     <Compile Include="Feature Finding\MSFeatureViewFactory.cs" />
     <Compile Include="Feature Finding\MSFeatureViewModel.cs" />
+    <Compile Include="FeatureRefinement\DeisotopingCorrectorViewModel.cs" />
+    <Compile Include="FeatureRefinement\FeatureRefinementViewModel.cs" />
+    <Compile Include="FeatureRefinement\FeatureRefinerView.xaml.cs">
+      <DependentUpon>FeatureRefinerView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FeatureRefinement\XicCreatorViewModel.cs" />
     <Compile Include="LoadingScreen.xaml.cs">
       <DependentUpon>LoadingScreen.xaml</DependentUpon>
     </Compile>
@@ -280,6 +286,7 @@
     </Compile>
     <Compile Include="Utils\PlotSavingViewModel.cs" />
     <Compile Include="Utils\PlotViewModelBase.cs" />
+    <Compile Include="Utils\SettingsEditorViewModelBase.cs" />
     <Compile Include="Utils\TaskBarProgress.cs" />
     <Compile Include="Utils\ThreadSafeDispatcher.cs" />
     <Compile Include="Utils\Throttler.cs" />
@@ -372,6 +379,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Feature Finding\FeatureFindingSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FeatureRefinement\FeatureRefinerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
