--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Clustering\ClusterSettings.xaml.cs">
       <DependentUpon>ClusterSettings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Clustering\ClusterSettingsTabViewModel.cs" />
     <Compile Include="Clustering\ClusterSettingsViewModel.cs" />
     <Compile Include="Clustering\ClusterView.xaml.cs">
       <DependentUpon>ClusterView.xaml</DependentUpon>
