--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -270,6 +270,7 @@
     <Compile Include="FeatureRefinement\FeatureRefinerView.xaml.cs">
       <DependentUpon>FeatureRefinerView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FeatureRefinement\MasicPeakFinderViewModel.cs" />
     <Compile Include="FeatureRefinement\XicCreatorViewModel.cs" />
     <Compile Include="LoadingScreen.xaml.cs">
       <DependentUpon>LoadingScreen.xaml</DependentUpon>
