Update nuget packages
Except for MathNet.Numerics, and System.Data.Sqlite

--- a/src/Applications/MultiAlign/packages.config
+++ b/src/Applications/MultiAlign/packages.config
@@ -9,7 +9,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
-  <package id="OxyPlot.Core" version="1.0.0-unstable1966" targetFramework="net45" />
-  <package id="OxyPlot.Wpf" version="1.0.0-unstable1966" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net451" />
+  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net451" />
 </packages>
