--- a/src/MultiAlignRogue/packages.config
+++ b/src/MultiAlignRogue/packages.config
@@ -7,7 +7,7 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net451" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
-  <package id="OxyPlot.Core" version="1.0.0-unstable1966" targetFramework="net45" />
-  <package id="OxyPlot.Wpf" version="1.0.0-unstable1966" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net451" />
+  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net451" />
 </packages>
