--- a/src/Test/MultiAlignTestSuite/packages.config
+++ b/src/Test/MultiAlignTestSuite/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="MathNet.Numerics" version="3.12.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="NUnit" version="3.4.1" targetFramework="net451" />
-  <package id="OxyPlot.Core" version="1.0.0-unstable1966" targetFramework="net45" />
-  <package id="OxyPlot.WindowsForms" version="1.0.0-unstable1966" targetFramework="net45" />
-  <package id="OxyPlot.Wpf" version="1.0.0-unstable1966" targetFramework="net45" />
-  <package id="Svg" version="2.2.1" targetFramework="net451" />
+  <package id="NUnit" version="3.5.0" targetFramework="net451" />
+  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net451" />
+  <package id="OxyPlot.WindowsForms" version="1.0.0" targetFramework="net451" />
+  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net451" />
+  <package id="Svg" version="2.2.2" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net451" />
 </packages>
