--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -325,7 +325,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -365,14 +364,11 @@
     <PackageReference Include="Extended.Wpf.Toolkit">
       <Version>3.5.0</Version>
     </PackageReference>
-    <PackageReference Include="Iesi.Collections">
-      <Version>4.0.4</Version>
+    <PackageReference Include="log4net">
+      <Version>2.0.8</Version>
     </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="NHibernate">
-      <Version>5.2.3</Version>
     </PackageReference>
     <PackageReference Include="Ookii.Dialogs">
       <Version>1.0.0</Version>
@@ -385,9 +381,6 @@
     </PackageReference>
     <PackageReference Include="System.Data.SQLite.Core">
       <Version>1.0.99</Version>
-    </PackageReference>
-    <PackageReference Include="Xceed.Products.Wpf.Toolkit.AvalonDock">
-      <Version>3.8.19076.18510</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
