--- a/src/MultiAlignRogue/MultiAlignRogue.csproj
+++ b/src/MultiAlignRogue/MultiAlignRogue.csproj
@@ -67,10 +67,7 @@
     </Reference>
     <Reference Include="PNNLOmics, Version=1.1.5385.41078, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\InformedProteomics\PNNLOmics.dll</HintPath>
-    </Reference>
-    <Reference Include="PNNLOmicsIO">
-      <HintPath>..\..\lib\PNNLOmicsIO.dll</HintPath>
+      <HintPath>..\..\lib\PNNLOmics.dll</HintPath>
     </Reference>
     <Reference Include="QuadTreeLib">
       <HintPath>..\..\lib\QuadTreeLib.dll</HintPath>
@@ -367,9 +364,6 @@
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit">
       <Version>3.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="log4net">
-      <Version>2.0.8</Version>
     </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
